--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <h1>Kero</h1>
         <p></p>
 
+        <style>
+    body {
+      background-color:pink;
+      
+    }
+  </style>
         <p class="view"><a href="https://github.com/Rubbin12/kero">View the Project on GitHub <small>Rubbin12/kero</small></a></p>
 
         
