--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         
         <ul>
-  <li><a href="page1.html">Flamingo</a></li>
-  <li><a href="page2.html">P1</a></li>
+  <li><a href="flamingo.html">Flamingo</a></li>
+  <li><a href="facts.html">Facts</a></li>
   <li><a href="page3.html">P2</a></li>
   
 </ul>
