--- a/flamingo.html
+++ b/flamingo.html
@@ -1,11 +1,11 @@
 
 <html>
   <title>
-    First website
+    Flamingos
   </title>
   
   <body>
-    <h1>This is my first github page</h1>
+    <h1>Flamingo Pictures</h1>
   </body>
   
   <style>
