--- a/flamingo.html
+++ b/flamingo.html
@@ -5,7 +5,14 @@
   </title>
   
   <body>
-    <h1>Flamingo Pictures</h1>
+    <h1>Flamingo</h1>
+    <img src="http://kids.nationalgeographic.com/content/dam/kids/photos/animals/Birds/A-G/flamingo-standing.jpg" alt="Flamingo" style="width:128px;height:128px;">
+    <h1>Baby Flamingo</h1>
+    <img src="http://img06.deviantart.net/8906/i/2008/221/a/c/baby_flamingo_by_mohaganbev.jpg" alt="Baby Flamingo" style="width:128px;height:128px;">
+    <h1>Flock of Flamingos</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/James's_Flamingo_mating_ritual.jpg" alt="Flock of Flamingos" style="width:128px;height:128px;">
+
+
   </body>
   
   <style>
