--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Kero</h1>
-        <img src="http://animal-dream.com/data_images/flamingo/flamingo3.jpg" alt="Baby Flamingo" style="width:300px;height:300px;">
+        <h1>Flamingos</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/American_Flamingo_-_Phoenicopterus_ruber.jpg/227px-American_Flamingo_-_Phoenicopterus_ruber.jpg" alt="Baby Flamingo" style="width:300px;height:300px;">
         
         <p></p>
 
