--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Flamingos</h1>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/American_Flamingo_-_Phoenicopterus_ruber.jpg/227px-American_Flamingo_-_Phoenicopterus_ruber.jpg" alt="Baby Flamingo" style="width:300px;height:300px;">
+        <img src="http://animal-dream.com/data_images/flamingo/flamingo3.jpg" alt="Baby Flamingo" style="width:300px;height:300px;">
         
         <p></p>
 
