--- a/facts.html
+++ b/facts.html
@@ -13,7 +13,9 @@
   <li>The feathers under flamingsos wings are black</li>
        <img src="http://4.bp.blogspot.com/_asMa_1TS1KQ/S8XvxsBmhKI/AAAAAAAAAZI/A4dtaAUGUbY/s1600/flamingo.jpg" style="width:300px;height:300px;">
   <li>In Madison, Wisconsin the plastic pink flamingo is the official bird</li>
+      <img src="http://getflocked.com/getflocked_group.jpg" style="width:300px;height:300px;">
   <li>The main predator of the flamingo is other birds</li>
+      <img src="http://yourshot.nationalgeographic.com/u/ss/fQYSUbVfts-T7pS2VP2wnKyN8wxywmXtY0-FwsgxoQSymZbTK-iaw_y5qzqeW8uil__iwjBdt-_JdCtSjY72/" style="width:300px;height:300px;">
   <li>Flamingos are not considered endagered</li>
       
       
