--- a/facts.html
+++ b/facts.html
@@ -29,5 +29,9 @@
       text-align:center;
     }
   </style>
+  <footer>
+  
+  <p>Source:http://mentalfloss.com/article/61853/15-fascinating-flamingo-facts</p>
+</footer>
   
 </html>
